--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^4.2.0-rc.2",
+    "element-china-area-data": "^5.0.2",
     "element-ui": "^2.9.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2"
