--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "echarts": "^4.2.0-rc.2",
     "element-china-area-data": "^5.0.2",
     "element-ui": "^2.9.2",
+    "qrcodejs2": "^0.0.2",
     "vue": "^2.6.14",
+    "vue-qr": "^4.0.9",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
