--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "echarts": "^4.2.0-rc.2",
+    "echarts": "^4.9.0",
     "element-china-area-data": "^5.0.2",
     "element-ui": "^2.9.2",
     "qrcodejs2": "^0.0.2",
